--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
-							<h1 class="text-center">Preston Wealth <span>Advisors</span></h1>
+							<h1 class="text-center">Preston Wealth <span>Advisors</span><small>&reg;</small></h1>
 							<p class="lead text-center">offers a customized approach where we take the extra steps to
 							listen to your financial goals and determine the best course of action in order to achieve
 							them.  Although our clients may have different visions of the future, while listening, we
@@ -723,7 +723,7 @@
 
 				<div class="row">
 					<div class="col-md-4">
-						<div class="media testimonial">
+						<div class="media testimonial team-placement-adjust">
 							<a href="#" data-toggle="modal" data-target="#modal-TJ" class="hvr-float">
 							<div class="media-right">
 								<i class="fa fa-info-circle fa-5x "></i>
@@ -855,7 +855,7 @@
 
 
 					<div class="col-md-4">
-						<div class="media testimonial">
+						<div class="media testimonial team-placement-adjust">
 							<a  href="#" data-toggle="modal" data-target="#modal-allison" class="hvr-float">
 							<div class="media-right">
 								<i class="fa fa-info-circle fa-5x "></i>
@@ -914,7 +914,7 @@
 
 				<div class="row">
 					<div class="col-md-4">
-						<div class="media testimonial">
+						<div class="media testimonial team-placement-adjust">
 							<a href="#" data-toggle="modal" data-target="#modal-rena" class="hvr-float">
 							<div class="media-right">
 								<i class="fa fa-info-circle fa-5x "></i>
@@ -1011,7 +1011,7 @@
 					</div>
 					<!-- Aaron Modal end -->
 
-					<div class="col-md-4">
+					<div class="col-md-4 team-placement-adjust">
 						<div class="media testimonial">
 							<a href="#" data-toggle="modal" data-target="#modal-pamela" class="hvr-float">
 							<div class="media-right">
@@ -1069,6 +1069,68 @@
 
 				</div>
 
+<!-- ==================== row 3 ====================== -->
+
+<div class="row">
+	<div class="col-md-4">
+	</div>
+
+	<div class="col-md-4 side-lines">
+		<div class="media testimonial">
+			<a href="#" data-toggle="modal" data-target="#modal-zach" class="hvr-float">
+			<div class="media-right">
+				<i class="fa fa-info-circle fa-5x "></i>
+			</div>
+			<div class="media-body">
+				<h3 class="media-heading">Zach Donnelly</h3>
+				<blockquote>
+					<p>Zach is responsible for providing detailed technical analysis pertaining to all securities within Preston Wealth Advisor’s investment universe.</p>
+					<footer>Analyst</footer>
+				</blockquote>
+			</div>
+			</a>
+		</div>
+	</div>
+
+	<!-- Zach Modal -->
+	<div class="modal fade" id="modal-zach" tabindex="-1" role="dialog" aria-labelledby="modal-zach-label" aria-hidden="true">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="modal-greg-label">Zach Donnelly</h4>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="col-md-12">
+							<img src="images/ph.jpg" class="img-responsive img-rounded center-block portraits" alt="Preston Wealth Advisors" />
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<p class="disc-text">Zach was elated to join Preston Wealth Advisors in August of 2016. As Preston Wealth Advisor’s in-house analyst, Zach is responsible for providing detailed technical analysis pertaining to all securities within Preston Wealth Advisor’s investment universe. Additionally, Zach is responsible for reviewing specific securities outside of the Preston Wealth Advisor investment universe, based on current market trends and sector-specific conditions in order to consider adding them to Preston Wealth Advisor’s investable universe. Zach also aids in confirming any high performance equity, fixed income, or alternative sector that is selected through Preston Wealth Advisor’s proprietary investment algorithm.<br><br>Prior to joining Preston Wealth Advisors, Zach served as a financial analyst for L.R. Global Partners, a New York based asset management firm that solely investments in frontier-market equities, where he performed bottom-up fundamental analysis, constructed financial models and forecasts, and engaged in macro-economic research specific to frontier-market countries.<br><br>A New Jersey native, Zach attended Wayne Hills High School and participated in his high school’s business elective program. He received his B.B.A with a concentration in Finance, with High Honors, from The George Washington University and graduated as a member of The National Society of Collegiate Scholars.<br><br>Currently, Zach lives in Arlington, VA and enjoys exercising, football, and basketball. In his spare time, Zach thoroughly enjoys watching his favorite New York sports teams.</p>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Zach Modal end -->
+
+	<div class="col-md-4">
+
+	</div>
+
+
+
+
+</div>
+
+<!-- ==================== row 4 ====================== -->
+
 								<div class="space"></div>
 								<p class="text-center lead">Account Access Pages</p>
 								<p>
@@ -1101,6 +1163,7 @@
 									<li><i class="fa fa-phone pr-10"></i> 703.757.0419</li>
 									<li><i class="fa fa-fax pr-10"></i> 703.757.0430 </li>
 									<li><i class="fa fa-envelope-o pr-10"></i> info@prestonwealthadvisors.com</li>
+									<li><a href="http://brokercheck.finra.org/" target="_blank" alt="Broker Check"><img src="images/broker-check.png"></a></li>
 								</ul>
 							</div>
 						</div>
@@ -1234,7 +1297,7 @@
 			<div class="container">
 				<p><em>This site is designed for U.S. residents only. Preston Wealth Advisors, LLC and its
 				representatives may only conduct business with residents of the states for which they are
-				properly registered. Preston Wealth Advisors, LLC cannot guarantee future financial results.</em></p>
+				properly registered. Preston Wealth Advisors, LLC cannot guarantee future financial results. Preston Wealth Advisors&reg; is a Registered Trademark of Preston Wealth Advisors, LLC.</em></p>
 			</div>
 		</div>
 		<!-- footer end -->
