Updated to the latest

--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-md-12">
-							<img src="images/ph.jpg" class="img-responsive img-rounded center-block portraits" alt="Preston Wealth Advisors" />
+							<img src="images/zach.jpg" class="img-responsive img-rounded center-block portraits" alt="Preston Wealth Advisors" />
 						</div>
 					</div>
 					<div class="row">
@@ -1162,15 +1162,15 @@
 									<li><i class="fa fa-map-marker pr-10"></i> 1886 Metro Center Dr. Suite 620, Reston, VA 20190</li>
 									<li><i class="fa fa-phone pr-10"></i> 703.757.0419</li>
 									<li><i class="fa fa-fax pr-10"></i> 703.757.0430 </li>
-									<li><i class="fa fa-envelope-o pr-10"></i> info@prestonwealthadvisors.com</li>
-									<li><a href="http://brokercheck.finra.org/" target="_blank" alt="Broker Check"><img src="images/broker-check.png"></a></li>
+									<li><i class="fa fa-envelope-o pr-10"></i> &#x69;&#x6E;&#x66;&#x6F;&#x40;&#x70;&#x72;&#x65;&#x73;&#x74;&#x6F;&#x6E;&#x77;&#x65;&#x61;&#x6C;&#x74;&#x68;&#x61;&#x64;&#x76;&#x69;&#x73;&#x6F;&#x72;&#x73;&#x2E;&#x63;&#x6F;&#x6D;</li>
+									<li class="broker-img"><a href="http://brokercheck.finra.org/" target="_blank" alt="Broker Check"><img src="images/broker-check.png"></a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div class="footer-content">
 
-								<form role="form" id="footerform" method="POST">
+								<form role="form" id="footerform" method="POST" class="form-margin">
 									<div class="form-group has-feedback">
 										<label class="sr-only" for="name">Name</label>
 										<input type="text" class="form-control" id="name" placeholder="Name" name="name2" required value="">
