--- a/index.html
+++ b/index.html
@@ -300,15 +300,6 @@
 								<i class="fa fa-bell-o fa-4x"></i>
 							</div>
 						</div>
-						<div class="media">
-							<div class="media-body">
-								<h4 class="media-heading text-right lead">Division of Labor</h4>
-								<p class="text-justify">You want to focus on client service, developing relationships, and increasing your assets under management while someone else tends to the portfolios. Preston Wealth Advisors is the “someone else.” Partner with us, and achieve your goals.</p>
-							</div>
-							<div class="media-right">
-								<i class="fa fa-briefcase fa-4x"></i>
-							</div>
-						</div>
 					</div>
 					<div class="space visible-xs"></div>
 					<div class="col-sm-6">
@@ -338,7 +329,7 @@
 												<h3>PWA Dynamic Income Portfolio</h3>
 												<p>We conceived the PWA Dynamic Income portfolio for investors who are seeking a mix of income, investment appreciation and who want to take advantage of market volatility in the U.S. Treasury markets. 80% of the portfolio will be invested in PWA’s Managed Dividend Portfolio: a tactical investment approach that selects a maximum of seven different and equally weighted exchange traded funds. The primary concern associated with the PWA Managed Dividend strategy is to diversify its underlying assets based on several non-correlated asset classes, preset volatility thresholds, and future income streams or yields. This is done in order to attempt maximum risk aversion while supplementing potential capital gains with above-average dividend or coupon payment. In order for any ETF to be considered, it must meet or exceed all of the preset technical thresholds associated with the PWA Managed Dividend trading algorithm. Additionally, these funds must have a 3% dividend yield, or greater. The other 20% of the portfolio will utilize the PWA Dynamic Treasury, a long/short U.S. Treasury strategy, in order to try and take advantage of the volatility in the U.S. Treasury markets. There are three possible scenarios on this side of the portfolio: Long, Short or Cash. This portion of the portfolios seeks to provide non correlation to the equity market. This strategy seeks to outperform the Bloomberg Barclays U.S. Aggregate Bond Index.</p>
 												<h3>PWA Dynamic Growth Portfolio</h3>
-												<p>PWA's Dynamic Growth Portfolio is designed for investors who are seeking capital appreciation with a hedging feature providing non-correlation to the equity markets. A portion of the portfolio will be invested in a diversiﬁed set of stocks that are traded monthly based on diﬀerent momentum and volatility indicators. This is done in an eﬀort to reduce both systematic and non-systematic risk as this portion of the portfolio strictly integrates specific sectors, industries or asset classes that display momentum and strong outperformance relative to the benchmark. The rest of the portfolio will be invested in the PWA Dynamic Treasury portfolio where our portfolio managers will utilize a long/short U.S. Treasury strategy in order to try and take advantage of the volatility in the U.S. Treasury markets. Three scenarios are possible on this side of the portfolio: Long, Short or Cash. This portion of the portfolio seeks to provide non-correlation to the equity markets. No single position will account for more than 50% of the portfolio. At the start of each quarter, if Equities are in an uptrend, then the equity portion of the portfolio is assigned the maximum allocation for the quarter (90%) and the PWA Dynamic Treasury, the minimum allocation (10%). However, if Equities are in a downtrend, then the equity portion of the portfolio is assigned the minimum allocation (30%) and the PWA Dynamic Treasury will be assigned the maximum allocation, (70%) for the quarter. The PWA Dynamic Growth Portfolio seeks to outperform the Standard & Poor’s 500 Total Return Index ("S&P 500®") on an annualized basis.</p>
+												<p>PWA's Dynamic Growth Portfolio is designed for investors who are seeking capital appreciation with a hedging feature providing non-correlation to the equity markets. A portion of the portfolio will be invested in a diversiﬁed set of stocks that are traded monthly based on diﬀerent momentum and volatility indicators. This is done in an eﬀort to reduce both systematic and non-systematic risk as this portion of the portfolio strictly integrates specific sectors, industries or asset classes that display momentum and strong outperformance relative to the benchmark. The rest of the portfolio will be invested in the PWA Dynamic Treasury portfolio where our portfolio managers will utilize a long/short U.S. Treasury strategy in order to try and take advantage of the volatility in the U.S. Treasury markets. Three scenarios are possible on this side of the portfolio: Long, Short or Cash. This portion of the portfolio seeks to provide non-correlation to the equity markets. No single position will account for more than 50% of the portfolio. At the start of each quarter, if equities are in an uptrend, then the equity portion of the portfolio is assigned the maximum allocation for the quarter (90%) and the PWA Dynamic Treasury, the minimum allocation (10%). However, if equities are in a downtrend, then the equity portion of the portfolio is assigned the minimum allocation (30%) and the PWA Dynamic Treasury will be assigned the maximum allocation, (70%) for the quarter. The PWA Dynamic Growth Portfolio seeks to outperform the Standard & Poor’s 500 Total Return Index ("S&P 500®") on an annualized basis.</p>
 												<h3>PWA Dynamic Hedge Portfolio</h3>
 												<p>PWA's Dynamic Hedge Portfolio is formulated for investors who are seeking to enhance investment performance while reducing risk and protecting their assets from typical market volatility and uncertainty. The portfolio is made up of 2 separate strategies running simultaneously. On the equity side, only 1 position is held at a time, investing in either the OTC 100, the OTC Short 100, long-term Treasury bonds or cash. Utilizing a disciplined tactical approach in the PWA Dynamic Hedge Portfolio, our advisors buy and sell 1 of these 3 carefully selected ETFs based on current market conditions. If our indicators signal a downtrend, the entire portfolio can be moved to cash in an attempt to preserve the principal investment. On the fixed income side, our portfolio managers will utilize a long/short US Treasury (PWA Dynamic Treasury) strategy in order to try and take advantage of the volatility in Treasury markets. There are 3 possible scenarios on this side of the portfolio: Long, Short or Cash.</p>
 											</div>
@@ -354,11 +345,11 @@
 
 						<div class="media">
 							<div class="media-left">
-								<i class="fa fa-child"></i>
+								<i class="fa fa-briefcase fa-4x"></i>
 							</div>
 							<div class="media-body">
-								<h4 class="media-heading lead">Trade Notification</h4>
-								<p class="text-justify">To ensure that you are apprised of the investment decisions we make, each day a trade is made, PWA will notify you of the Portfolios being traded.</p>
+								<h4 class="media-heading lead">Division of Labor</h4>
+								<p class="text-justify">You want to focus on client service, developing relationships, and increasing your assets under management while someone else tends to the portfolios. Preston Wealth Advisors is the “someone else.” Partner with us, and achieve your goals.</p>
 							</div>
 						</div>
 					</div>
