--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 							<div class="col-sm-6 col-md-4 isotope-item">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/img-athlete2.png" alt="Preston Wealth Advisors">
+										<img src="images/img-athletics.png" alt="Preston Wealth Advisors">
 										<a class="overlay" data-toggle="modal" data-target="#project-5">
 											<i class="fa fa-search-plus"></i>
 											<span>More Info</span>
@@ -586,7 +586,7 @@
 
 														While career and bankruptcy statistics vary widely from sport to sport, the resounding drumbeat remains: get your financial house in order while you are earning. Since, Professional Athlete Services is one of our primary practices, led by our CEO and former college athlete, TJ Doremus, we are knowledgeable about your unique job demands and have developed tailored concierge financial services to meet your specific needs.  As a part of our Professional Athlete Services, we offer investment and financial management services working with you to manage your current financial situation and helping to secure your financial future, post-sports career.  Our current client roster includes professional athletes from both the NHL and MLB. We look forward to joining your successful financial team.<br><br>
 
-														<div class="align-right col-md-5"><img src="images/img-athlete2.png" alt="Preston Wealth Advisors"></div>
+														<div class="align-right col-md-5"><img src="images/img-athletics.png" alt="Preston Wealth Advisors"></div>
 
 														Our game plan begins with educating you on how your finances work; this typically is a team effort as we collect information on your current situation and work with you to create a financial picture of where you are and why.  After all, how can you play a game you do not know how to play? The next step is typically a financial plan that would include where you want to be in the future with the best “play” to get you there.  Then, in addition to helping you plan, save, and invest for this future, we help organize your financial life now by working with you to “automate” bills to minimize your financial worries and/or stress while on the road.  Once complete, we turn our attention to your post-sports career, helping you explore ways to capitalize on your current skills and experience to launch into the next chapter of your life. Any player can live like a king for a few years. With our help, you can live like a prince for the rest of your life. Getting caught up in the spending frenzy of a professional league lifestyle is easy. Preston Wealth Advisors allows you to enjoy your earnings responsibly while helping to protect your net worth long term. Learn how we can create a game plan to help secure your financial future.</p>
 													</div>
@@ -612,7 +612,7 @@
 											<span>More Info</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block new-hover-color" data-toggle="modal" data-target="#project-6">Retirement Income Planning</a>
+									<a class="btn btn-default btn-block new-hover-color" data-toggle="modal" data-target="#project-6">Individual Retirement Services</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-6" tabindex="-1" role="dialog" aria-labelledby="project-6-label" aria-hidden="true">
@@ -623,10 +623,12 @@
 												<h4 class="modal-title" id="project-6-label">Services</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Retirement Planning</h3>
+												<h3>Individual Retirement Services</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>Retirement can be an exciting time— for those who are financially prepared. We work with you to plan for this life stage by advising you on the best investment strategy in order for your income to remain consistent during retirement.  This can be done through IRA’s, annuities, 401(k)’s, trusts or other investment vehicles.<br><br>We also offer investment advisory services for 401k plans in both a discretionary or non-discretionary capacity.  If you are a business owner and looking to start a 401(k) for your company or simply want to “shop” around for a different plan custodian, please contact us!</p>
+														<p>Retirement can be an exciting time- for those who are financially prepared. We work with you to prepare for this life stage.<br><br>
+														Each individual’s retirement goals, needs and expectations are unique, so we begin by empowering you through education and a financial plan that helps discover the income you will need to retire.  Together, we find the best investment strategies in order for your income to remain at that consistent level during retirement. This can be done through a combination of IRA’s, dividend producing Real Estate, 401(k)'s, trusts and/or other Income producing investment vehicles.<br><br>
+														Life is dynamic.  Continued communication and collaboration for the duration of your employment and retirement are essential to your plan and retirement success.</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/img-retirement.png" alt="Preston Wealth Advisors">
@@ -671,6 +673,48 @@
 													</div>
 													<div class="col-md-6">
 														<img src="images/img-specialneeds.png" alt="Preston Wealth Advisors">
+													</div>
+												</div>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- Modal end -->
+							</div>
+
+
+							<!-- square #8 -->
+
+							<div class="col-sm-6 col-md-4 isotope-item">
+								<div class="image-box">
+									<div class="overlay-container">
+										<img src="images/img-401k.png" alt="Preston Wealth Advisors">
+										<a class="overlay" data-toggle="modal" data-target="#project-8">
+											<i class="fa fa-search-plus"></i>
+											<span>More Info</span>
+										</a>
+									</div>
+									<a class="btn btn-default btn-block new-hover-color" data-toggle="modal" data-target="#project-8">Corporate Retirement Solutions</a>
+								</div>
+								<!-- Modal -->
+								<div class="modal fade" id="project-8" tabindex="-1" role="dialog" aria-labelledby="project-8-label" aria-hidden="true">
+									<div class="modal-dialog modal-lg">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+												<h4 class="modal-title" id="project-8-label">Services</h4>
+											</div>
+											<div class="modal-body">
+												<h3>Corporate Retirement Solutions</h3>
+												<div class="row">
+													<div class="col-md-6">
+														<p>Our expertise is tailored to meet your needs.  We offer investment advisory services for 401k plans in both a discretionary or non-discretionary capacity.  We are proud to be a fiduciary, acting in the best interest of our clients, for each of the 401k plans we work with.  We help design your plan to maximize savings for you, while building an investment platform that you can be proud to offer your employees.  Once the plan is implemented, we will continually educate your employees while providing ongoing support and guidance on all levels.  If you are a business owner and looking to start a 401(k) for your company, want to compare your current plan or just want an outside opinion, please contact us!</p>
+													</div>
+													<div class="col-md-6">
+														<img src="images/img-401k.png" alt="Preston Wealth Advisors">
 													</div>
 												</div>
 											</div>
@@ -928,11 +972,10 @@
 									</div>
 									<div class="row">
 										<div class="col-md-12">
-											<p class="disc-text">As Preston Wealth Advisor’s VP of Institutional Sales, Rena introduces Preston Wealth Advisors tacticalasset allocation products and portfolios to both institutional &amp; retail clients. Prior to joining Preston, Rena served as an Assistant Vice President Regional Banking Consultant for Wells Fargo Advisors providing holistic financial planning expertise to over 350 Private Client Group Advisors. She previously worked for Wachovia Bank as a Licensed Financial Specialist and at ProFund Advisors, LLC on the Institutional Platform, offering leveraged index funds to Financial Advisors, RIAs, and Broker/Dealers.<br><br>
-											Having experience with direct clients, Rena understands the day to day of financial advisors and the communication and service required for the retention of client relationships.   She works closely with advisors to understand their practice and to provide them with the necessary resources and communication to arm them with knowledge about the PWA portfolios and ideas on how they may be used in a client portfolios. Her willingness to customize presentations and marketing pieces to fit an advisors style and the ability to attend and present at trade shows, seminars and client events positions her as a key partner to various RIAs.  Rena also holds her mortgage licenses for VA, MD, and DC and provides access to mortgages with a direct lender in order to better assist her own clients with a complete financial picture. Rena also holds her Series 63, Series 65, and Life and Health Insurance License.<br><br>
-											A native of McLean, VA., Rena attended McLean High School. She received her B.B.A. with a concentration in Finance from The George Washington University, and her M.B.A. with Honors from the George Washington University’s World Executive M.B.A. Program. Her concentration in International Business led her to study developing and emerging markets and to participate in consulting projects in Addis Ababa, Ethiopia and Istanbul, Turkey. She is a member of the Beta Gamma Sigma International Business Honor’s Society.
-											<br><br>
-											Currently, Rena and her husband, Sherif, reside in Arlington, VA.</p>
+											<p class="disc-text">As Preston Wealth Advisor’s VP of Institutional Sales, Rena introduces Preston Wealth Advisors tactical asset allocation products and portfolios to both institutional &amp; retail clients. Prior to joining Preston, Rena served as an Assistant Vice President Regional Banking Consultant for Wells Fargo Advisors providing holistic financial planning expertise to over 350 Private Client Group Advisors. She previously worked for Wachovia Bank as a Licensed Financial Specialist and at ProFund Advisors, LLC on the Institutional Platform, offering leveraged index funds to Financial Advisors, RIAs, and Broker/Dealers.<br><br>
+											Having experience with direct clients, Rena understands the day to day of financial advisors and the communication and service required for the retention of client relationships.   She works closely with advisors to understand their practice and to provide them with the necessary resources and communication to arm them with knowledge about the PWA portfolios and ideas on how they may be used in a client portfolios. Her willingness to customize presentations and marketing pieces to fit an advisors style and the ability to attend and present at trade shows, seminars and client events positions her as a key partner to various RIAs.  Rena also holds her mortgage licenses for VA, MD, DC, FL, and CA. Rena also holds her Series 63 and Series 65.<br><br>
+											A native of McLean, VA., Rena attended McLean High School. She received her B.B.A. with a concentration in Finance from The George Washington University, and her M.B.A. with Honors from the George Washington University’s World Executive M.B.A. Program. Her concentration in International Business led her to study developing and emerging markets and to participate in consulting projects in Addis Ababa, Ethiopia and Istanbul, Turkey. She is a member of the Beta Gamma Sigma International Business Honor's Society.<br><br>
+											Currently, Rena, her husband, Sherif,  and their son, Zane, reside in Arlington, VA.</p>
 										</div>
 									</div>
 								</div>
